--- a/future.html
+++ b/future.html
@@ -81,8 +81,10 @@
     ================================================== -->
   </body>
   <script>
+    $(document).ready(function() {
      $(function () 
      {  $('.collapse').collapse();
+    });
     });  
 
   </script>
