--- a/interests.html
+++ b/interests.html
@@ -77,9 +77,11 @@
     <!-- Bootstrap core JavaScript  -->
     <!-- Javascript -->
     <script>  
+      $(document).ready(function() { 
       $(function ()  
       { $(".button1").popover();  
-      });  
+      });
+      }); 
     </script>  
   </body>
 </html>
